syntax = "proto3";

package qadena.nameservice;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "qadena/nameservice/params.proto";
import "qadena/nameservice/pedersen_commit.proto";

option go_package = "qadena/x/nameservice/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams   (MsgUpdateParams  ) returns (MsgUpdateParamsResponse  );
  rpc BindCredential (MsgBindCredential) returns (MsgBindCredentialResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                            "authority";
  option           (amino.name) = "qadena/x/nameservice/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgBindCredential {
  option (cosmos.msg.v1.signer) = "creator";
  string         creator                  = 1;
  string         credentialType           = 2;
  string         credentialInfo           = 3;
  BPedersenCommit credentialPedersenCommit = 4;
}

message MsgBindCredentialResponse {}

